--- a/app.json
+++ b/app.json
@@ -7,6 +7,14 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "android": {
+      "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"],
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyBBb9bOEPqf7g1NSx-TwAoAy-WdoiY4MvY"
+        }
+      }
+    }
   }
 }
