--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.1",
     "@react-navigation/native": "^5.8.9",
@@ -17,6 +18,8 @@
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "expo-updates": "~0.3.2",
+    "geolib": "^3.3.1",
+    "haversine": "^1.1.1",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "react": "16.13.1",
@@ -24,6 +27,7 @@
     "react-native": "~0.63.3",
     "react-native-async-storage": "0.0.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "~2.10.1",
