--- a/package.json
+++ b/package.json
@@ -17,22 +17,27 @@
     "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
-    "expo-updates": "~0.3.2",
+    "expo-updates": "~0.3.3",
     "geolib": "^3.3.1",
     "haversine": "^1.1.1",
+    "lottie-ios": "^3.1.8",
+    "lottie-react-native": "^3.5.0",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.3",
+    "react-native": "0.63.3",
+    "react-native-animated-loader": "0.0.8",
     "react-native-async-storage": "0.0.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-loader-kit": "^1.0.3",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "^3.1.4",
+    "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-unimodules": "~0.11.0",
-    "react-native-web": "~0.13.12",
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-web": "~0.13.7",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
