--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-native-animated-loader": "0.0.8",
     "react-native-async-storage": "0.0.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-loader-kit": "^1.0.3",
     "react-native-maps": "0.27.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
