--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-loader-kit": "^1.0.3",
     "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
